--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SullivanMor</title>
+  <title>Sullivan Mór</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,3 +11,12 @@
   <app-root></app-root>
 </body>
 </html>
+
+
+<!-- 
+cd "Carpetas/Mis proyectos/Inmobilaria sullivan/front-end-sullivan-mór/sullivan-mor" 
+-->
+
+<!-- 
+json-server watch-- db.json --port 3000 
+-->
